syntax = "proto3";
package pryzmatics.orderbook;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/pryzm-finance/pryzmatics/types/orderbook";

message Reservation {
  uint64 id = 1;
  string owner = 2;
  string token_in = 3;
  string token_out = 4;
  string price = 5 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
//  string total_amount = 6 [
//    (cosmos_proto.scalar) = "cosmos.Int",
//    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
//    (gogoproto.nullable) = false
//  ];
//  string fulfilled_amount = 7 [
//    (cosmos_proto.scalar) = "cosmos.Int",
//    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
//    (gogoproto.nullable) = false
//  ];
  bool live = 8;
  google.protobuf.Timestamp expiration_time = 9 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];
  google.protobuf.Timestamp last_update_time = 10 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];
}

message OrderReservation {
  uint64 order_id = 1;
  uint64 reservation_id = 2;
  string execution_price = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string order_amount = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string reservation_amount = 5 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}
